--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -15,6 +15,7 @@
   "mpCommandDescriptionAddElements": "Adicionar elementos",
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
+  "mpCommandDescriptionAddOptionToElement": "Adicionar opção",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
   "mpCommandDescriptionEditBezierCurve": "Editar curva Bézier",
   "mpCommandDescriptionEditLine": "Editar linha",
@@ -27,6 +28,7 @@
   "mpCommandDescriptionRemoveElements": "Apagar elementos",
   "mpCommandDescriptionRemoveLine": "Apagar linha",
   "mpCommandDescriptionRemoveLineSegment": "Apagar segmento de linha",
+  "mpCommandDescriptionRemoveOptionFromElement": "Remover opção",
   "mpCommandDescriptionRemovePoint": "Apagar ponto",
 
   "mpLengthUnitCentimeterAbbreviation": "cm",
