--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -23,13 +23,16 @@
   "mpCommandDescriptionMoveElements": "Mover elementos",
   "mpCommandDescriptionMoveLine": "Mover linha",
   "mpCommandDescriptionMovePoint": "Mover ponto",
+  "mpCommandDescriptionMultipleElements": "Editar vários elementos",
   "mpCommandDescriptionMoveStraightLineSegment": "Mover segmento de linha reta",
   "mpCommandDescriptionRemoveElements": "Apagar elementos",
   "mpCommandDescriptionRemoveLine": "Apagar linha",
   "mpCommandDescriptionRemoveLineSegment": "Apagar segmento de linha",
   "mpCommandDescriptionRemoveOptionFromElement": "Remover opção",
+  "mpCommandDescriptionRemoveOptionFromElements": "Remover opção de diversos elementos",
   "mpCommandDescriptionRemovePoint": "Apagar ponto",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
+  "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
 
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFootAbbreviation": "ft",
