One Focus() per window

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -17,7 +17,7 @@
   "mpButtonCancel": "Cancelar",
   "mpButtonOK": "OK",
 
-  "mpChoiceSet": "Definir",
+  "mpChoiceSet": "Definido",
   "mpChoiceUnset": "Não definido",
 
   "mpCommandDescriptionAddElements": "Adicionar elementos",
