Small adjustments in MPAltitudeValueOptionWidget DropdownMenu

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -288,7 +288,7 @@
   "thCommandOptionFrom": "De",
   "thCommandOptionHead": "Cabeça",
   "thCommandOptionId": "ID",
-  "thCommandOptionLengthUnit": "Unidade de comprimento",
+  "thCommandOptionLengthUnit": "Unidade",
   "thCommandOptionLineDirection": "Direção",
   "thCommandOptionLineGradient": "Gradiente",
   "thCommandOptionLineHeight": "Altura",
