--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -54,6 +54,8 @@
   "mpLengthUnitYard": "jarda",
   "mpLengthUnitYardAbbreviation": "yd",
 
+  "mpOptionsEditTitle": "Opções",
+
   "parsingErrors": "Erros na interpretação do arquivo",
 
   "th2FileEditPageAddArea": "Criar área (A)",
