--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -54,6 +54,14 @@
   "mpLengthUnitYard": "jarda",
   "mpLengthUnitYardAbbreviation": "yd",
 
+  "mpPLATypeAll": "Todos",
+  "mpPLATypeAreaTitle": "Tipos de área",
+  "mpPLATypeCurrent": "Atual",
+  "mpPLATypeLastUsed": "Últimos usados",
+  "mpPLATypeLineTitle": "Tipos de linha",
+  "mpPLATypeMostUsed": "Mais usados",
+  "mpPLATypePointTitle": "Tipos de ponto",
+
   "mpOptionsEditTitle": "Opções",
 
   "parsingErrors": "Erros na interpretação do arquivo",
@@ -90,6 +98,28 @@
   "th2FileEditPageZoomOutScrap": "Mostrar croqui (4)",
   "th2FileEditPageZoomToSelection": "Mostrar seleção (2)",
   "th2FilePickSelectTH2File": "Selecione um arquivo TH2",
+
+  "thAreaBedrock": "Rocha matriz",
+  "thAreaBlocks": "Blocos",
+  "thAreaClay": "Argila",
+  "thAreaDebris": "Detritos",
+  "thAreaFlowstone": "Travertino",
+  "thAreaIce": "Gelo",
+  "thAreaMoonmilk": "Leite de Lua",
+  "thAreaMudcrack": "Rachadura de Lama",
+  "thAreaPebbles": "Seixos",
+  "thAreaPillar": "Pilar",
+  "thAreaPillars": "Pilares",
+  "thAreaPillarsWithCurtains": "Pilares com Cortinas",
+  "thAreaPillarWithCurtains": "Pilar com Cortinas",
+  "thAreaSand": "Areia",
+  "thAreaSnow": "Neve",
+  "thAreaStalactite": "Estalactite",
+  "thAreaStalactiteStalagmite": "Estalactite e Estalagmite",
+  "thAreaStalagmite": "Estalagmite",
+  "thAreaSump": "Sifão",
+  "thAreaU": "Usuário",
+  "thAreaWater": "Água",
 
   "thElementArea": "Área",
   "thElementAreaBorderTHID": "ID de borda de área",
