--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -24,9 +24,15 @@
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
+  "mpCommandDescriptionEditAreasType": "Editar tipo de áreas",
+  "mpCommandDescriptionEditAreaType": "Editar tipo de área",
   "mpCommandDescriptionEditBezierCurve": "Editar curva Bézier",
   "mpCommandDescriptionEditLine": "Editar linha",
   "mpCommandDescriptionEditLineSegment": "Editar segmento de linha",
+  "mpCommandDescriptionEditLinesType": "Editar tipo de linhas",
+  "mpCommandDescriptionEditLineType": "Editar tipo de linha",
+  "mpCommandDescriptionEditPointsType": "Editar tipo de pontos",
+  "mpCommandDescriptionEditPointType": "Editar tipo de ponto",
   "mpCommandDescriptionMoveBezierLineSegment": "Mover segmento de linha Bézier",
   "mpCommandDescriptionMoveElements": "Mover elementos",
   "mpCommandDescriptionMoveLine": "Mover linha",
