Fixing Change Scraps overlay window title and tooltip

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -436,6 +436,12 @@
     "type": "text"
   },
 
+  "th2FileEditPageChangeActiveScrapTitle": "Change active scrap",
+  "@th2FileEditPageChangeActiveScrapTitle": {
+    "description": "The title for the change active scrap dialog",
+    "type": "text"
+  },
+
   "th2FileEditPageEmptySelectionStatusBarMessage": "Empty selection",
   "@th2FileEditPageEmptySelectionStatusBarMessage": {
     "description": "The status bar message for the empty selection",
